--- a/force-app/main/default/classes/MovieActorsListController.cls
+++ b/force-app/main/default/classes/MovieActorsListController.cls
@@ -1,8 +1,13 @@
 public with sharing class MovieActorsListController {
     @AuraEnabled
     public static List<MBMS_Movie_Actor__c> getMovieActors() {
-        return [SELECT Id, Name, MBMS_Movie__r.Name
-                FROM MBMS_Movie_Actor__c];
+        return [
+            SELECT
+                Id,
+                Name,
+                MBMS_Movie__r.Name
+            FROM MBMS_Movie_Actor__c
+        ];
     }
 
     @AuraEnabled
