--- a/force-app/main/default/classes/MovieNewsBuilderTest.cls
+++ b/force-app/main/default/classes/MovieNewsBuilderTest.cls
@@ -20,63 +20,84 @@ private class MovieNewsBuilderTest {
     
     @isTest
     static void insertedMovieNewsShouldNotBeNull() {
-        MBMS_Movie_News__c movieNews = [SELECT Id
-                                        FROM MBMS_Movie_News__c
-                                        LIMIT 1];
+        MBMS_Movie_News__c movieNews = [
+            SELECT
+                Id
+            FROM MBMS_Movie_News__c
+            LIMIT 1
+        ];
 
         System.assertNotEquals(null, movieNews, String.format(Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie_News__c' }));
     }
     
     @isTest
     static void movieNewsShouldHaveName() {
-        MBMS_Movie_News__c movieNews = [SELECT Name
-                                        FROM MBMS_Movie_News__c
-                                        LIMIT 1];
+        MBMS_Movie_News__c movieNews = [
+            SELECT
+                Name
+            FROM MBMS_Movie_News__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.TEST_STRING_VALUE, movieNews.Name, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'Name', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void movieNewsShouldHaveTitle() {
-        MBMS_Movie_News__c movieNews = [SELECT MBMS_Title__c
-                                        FROM MBMS_Movie_News__c
-                                        LIMIT 1];
+        MBMS_Movie_News__c movieNews = [
+            SELECT
+                MBMS_Title__c
+            FROM MBMS_Movie_News__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.TEST_STRING_VALUE, movieNews.MBMS_Title__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Title__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void movieNewsShouldHaveContent() {
-        MBMS_Movie_News__c movieNews = [SELECT MBMS_Content__c
-                                        FROM MBMS_Movie_News__c
-                                        LIMIT 1];
+        MBMS_Movie_News__c movieNews = [
+            SELECT
+                MBMS_Content__c
+            FROM MBMS_Movie_News__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.TEST_STRING_VALUE, movieNews.MBMS_Content__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Content__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void movieNewsShouldHaveTags() {
-        MBMS_Movie_News__c movieNews = [SELECT MBMS_Tags__c
-                                        FROM MBMS_Movie_News__c
-                                        LIMIT 1];
+        MBMS_Movie_News__c movieNews = [
+            SELECT
+                MBMS_Tags__c
+            FROM MBMS_Movie_News__c
+            LIMIT 1
+        ];
         
         System.assert(movieNews.MBMS_Tags__c.contains(Constants.TEST_STRING_VALUE), String.format(Constants.FIELD_SHOULD_CONTAIN_PATTERN, new List<String> { 'MBMS_Tags__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void movieNewsShouldHaveArtist() {
-        MBMS_Movie_News__c movieNews = [SELECT MBMS_Movie__c
-                                        FROM MBMS_Movie_News__c
-                                        LIMIT 1];
+        MBMS_Movie_News__c movieNews = [
+            SELECT
+                MBMS_Movie__c
+            FROM MBMS_Movie_News__c
+            LIMIT 1
+        ];
         
         System.assertNotEquals(null, movieNews.MBMS_Movie__c, String.format(Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie__c' }));
     }
     
     @isTest
     static void movieNewsShouldHaveImageURL() {
-        MBMS_Movie_News__c movieNews = [SELECT MBMS_Image_URL__c
-                                        FROM MBMS_Movie_News__c
-                                        LIMIT 1];
+        MBMS_Movie_News__c movieNews = [
+            SELECT
+                MBMS_Image_URL__c
+            FROM MBMS_Movie_News__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.TEST_STRING_VALUE, movieNews.MBMS_Image_URL__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Image_URL__c', Constants.TEST_STRING_VALUE }));
     }
