--- a/force-app/main/default/classes/MovieTriggerHandler.cls
+++ b/force-app/main/default/classes/MovieTriggerHandler.cls
@@ -6,7 +6,13 @@ public class MovieTriggerHandler {
     
     public void onBeforeDelete(List<MBMS_Movie__c> movies) {
         Set<Id> movieIds = (new Map<Id, MBMS_Movie__c>(movies)).keySet();
-        List<MBMS_Movie_Actor__c> movieActors = [SELECT Id FROM MBMS_Movie_Actor__c WHERE MBMS_Movie__r.Id IN :movieIds];
+        List<MBMS_Movie_Actor__c> movieActors = [
+            SELECT
+                Id
+            FROM MBMS_Movie_Actor__c
+            WHERE MBMS_Movie__r.Id
+            IN :movieIds
+        ];
         
         delete movieActors;
     }
