--- a/force-app/main/default/classes/ArtistBuilderTest.cls
+++ b/force-app/main/default/classes/ArtistBuilderTest.cls
@@ -18,18 +18,24 @@ private class ArtistBuilderTest {
 
     @isTest
     static void insertedArtistShouldNotBeNull() {
-        MBMS_Artist__c artist = [SELECT Id
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                Id
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
         
         System.assertNotEquals(null, artist, String.format(Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
     }
     
     @isTest
     static void artistShouldHaveName() {
-        MBMS_Artist__c artist = [SELECT Name
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                Name
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
         
         artist.Name = Constants.TEST_STRING_VALUE;
         update artist;
@@ -39,62 +45,84 @@ private class ArtistBuilderTest {
     
     @isTest
     static void artistShouldHaveFirstName() {
-        MBMS_Artist__c artist = [SELECT MBMS_First_Name__c
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                MBMS_First_Name__c
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.TEST_STRING_VALUE, artist.MBMS_First_Name__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_First_Name__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void artistShouldHaveLastName() {
-        MBMS_Artist__c artist = [SELECT MBMS_Last_Name__c
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                MBMS_Last_Name__c
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.TEST_STRING_VALUE, artist.MBMS_Last_Name__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Last_Name__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void artistShouldHaveBirthPlace() {
-        MBMS_Artist__c artist = [SELECT MBMS_Birthplace__c
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                MBMS_Birthplace__c
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
 
         System.assertEquals(Constants.TEST_STRING_VALUE, artist.MBMS_Birthplace__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Birthplace__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void artistShouldHaveDateOfBirth() {
-        MBMS_Artist__c artist = [SELECT MBMS_Date_of_Birth__c
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                MBMS_Date_of_Birth__c
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
+                                 
         System.assertEquals(Constants.TEST_DATE_200_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Birth__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Date_of_Birth__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void artistShouldHaveDateOfDeath() {
-        MBMS_Artist__c artist = [SELECT MBMS_Date_of_Death__c
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                MBMS_Date_of_Death__c
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
 
         System.assertEquals(Constants.TEST_DATE_10_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Death__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Date_of_Death__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void artistShouldHaveDescription() {
-        MBMS_Artist__c artist = [SELECT MBMS_Description__c
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                MBMS_Description__c
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.TEST_STRING_VALUE, artist.MBMS_Description__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Description__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
     static void artistShouldHaveRole() {
-        MBMS_Artist__c artist = [SELECT MBMS_Roles__c
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                MBMS_Roles__c
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
         
         List<String> roles = artist.MBMS_Roles__c.split(';');
         
@@ -104,18 +132,24 @@ private class ArtistBuilderTest {
 
     @isTest
     static void artistShouldHaveStatus() {
-        MBMS_Artist__c artist = [SELECT MBMS_Status__c
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                MBMS_Status__c
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.STATUS_APPROVED, artist.MBMS_Status__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status__c', Constants.STATUS_APPROVED }));
     }
     
     @isTest
     static void artistShouldHaveStatusComment() {
-        MBMS_Artist__c artist = [SELECT MBMS_Status_Comment__c
-                                 FROM MBMS_Artist__c
-                                 LIMIT 1];
+        MBMS_Artist__c artist = [
+            SELECT
+                MBMS_Status_Comment__c
+            FROM MBMS_Artist__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.INITIAL_STATUS_COMMENT, artist.MBMS_Status_Comment__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', Constants.INITIAL_STATUS_COMMENT }));
     }
