--- a/force-app/main/default/classes/MovieActorBuilderTest.cls
+++ b/force-app/main/default/classes/MovieActorBuilderTest.cls
@@ -20,36 +20,48 @@ private class MovieActorBuilderTest {
     
     @isTest
     static void insertedMovieActorShouldNotBeNull() {
-        MBMS_Movie_Actor__c movieActor = [SELECT Id
-                                          FROM MBMS_Movie_Actor__c
-                                          LIMIT 1];
+        MBMS_Movie_Actor__c movieActor = [
+            SELECT
+                Id
+            FROM MBMS_Movie_Actor__c
+            LIMIT 1
+        ];
         
         System.assertNotEquals(null, movieActor, String.format(Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie_Actor__c' }));
     }
     
     @isTest
     static void movieActorShouldHaveActor() {
-        MBMS_Movie_Actor__c movieActor = [SELECT MBMS_Artist__c
-                                          FROM MBMS_Movie_Actor__c
-                                          LIMIT 1];
+        MBMS_Movie_Actor__c movieActor = [
+            SELECT
+                MBMS_Artist__c
+            FROM MBMS_Movie_Actor__c
+            LIMIT 1
+        ];
         
         System.assertNotEquals(null, movieActor.MBMS_Artist__c, String.format(Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
     }
     
     @isTest
     static void movieActorShouldHaveMovie() {
-        MBMS_Movie_Actor__c movieActor = [SELECT MBMS_Movie__c
-                                          FROM MBMS_Movie_Actor__c
-                                          LIMIT 1];
+        MBMS_Movie_Actor__c movieActor = [
+            SELECT
+                MBMS_Movie__c
+            FROM MBMS_Movie_Actor__c
+            LIMIT 1
+        ];
         
         System.assertNotEquals(null, movieActor.MBMS_Movie__c, String.format(Constants.FIELD_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Movie__c' }));
     }
     
     @isTest
     static void movieActorShouldHaveCharacterName() {
-        MBMS_Movie_Actor__c movieActor = [SELECT MBMS_Character_Name__c
-                                          FROM MBMS_Movie_Actor__c
-                                          LIMIT 1];
+        MBMS_Movie_Actor__c movieActor = [
+            SELECT
+                MBMS_Character_Name__c
+            FROM MBMS_Movie_Actor__c
+            LIMIT 1
+        ];
         
         System.assertEquals(Constants.TEST_STRING_VALUE, movieActor.MBMS_Character_Name__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Character_Name__c', Constants.TEST_STRING_VALUE }));
     }
