--- a/force-app/main/default/classes/MoviesRemovalBatchTest.cls
+++ b/force-app/main/default/classes/MoviesRemovalBatchTest.cls
@@ -11,7 +11,11 @@ private class MoviesRemovalBatchTest {
     
     @isTest
     private static void shouldDeleteExistingMovies() {
-        List<MBMS_Movie__c> movies = [SELECT Id FROM MBMS_Movie__c];
+        List<MBMS_Movie__c> movies = [
+            SELECT
+                Id
+            FROM MBMS_Movie__c
+        ];
 
         for (MBMS_Movie__c movie : movies) {
             Test.setCreatedDate(movie.Id, Constants.TEST_DATE_10_DAYS_BEFORE_TODAY);
@@ -24,7 +28,11 @@ private class MoviesRemovalBatchTest {
         Database.executeBatch(new MoviesRemovalBatch());
         Test.stopTest();
         
-        movies = [SELECT Id FROM MBMS_Movie__c];
+        movies = [
+            SELECT
+                Id
+            FROM MBMS_Movie__c
+        ];
 
         System.assertEquals(0, movies.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'movies', '0' }));
     }
@@ -53,24 +61,41 @@ private class MoviesRemovalBatchTest {
         Database.executeBatch(new MoviesRemovalBatch());
         Test.stopTest();
         
-        movies = [SELECT Id FROM MBMS_Movie__c];
+        movies = [
+            SELECT
+                Id
+            FROM MBMS_Movie__c
+        ];
         
         System.assertEquals(0, movies.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'movies', '0' }));
     }
     
     @isTest
     private static void shouldNotDeleteExistingMovies() {
-        List<MBMS_Movie__c> movies = [SELECT Id FROM MBMS_Movie__c];
+        List<MBMS_Movie__c> movies = [
+            SELECT
+                Id
+            FROM MBMS_Movie__c
+        ];
         
         Test.startTest();
         Database.executeBatch(new MoviesRemovalBatch());
         Test.stopTest();
         
-        movies = [SELECT Id FROM MBMS_Movie__c];
+        movies = [
+            SELECT
+                Id
+            FROM MBMS_Movie__c
+        ];
+
         System.assert(movies.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'movies', '0' }));
     }
     
     private static void removeExistingMovies() {
-        delete [SELECT Id FROM MBMS_Movie__c];
+        delete [
+            SELECT
+                Id
+            FROM MBMS_Movie__c
+        ];
     }
 }
