--- a/force-app/main/default/classes/NewsController.cls
+++ b/force-app/main/default/classes/NewsController.cls
@@ -3,9 +3,29 @@ public with sharing class NewsController {
     public static List<sObject> getNews() {
         List<sObject> result = new List<sObject>();
         
-        result.addAll([SELECT Id, MBMS_Title__c, MBMS_Artist__c FROM MBMS_Artist_News__c]);
-        result.addAll([SELECT Id, MBMS_Title__c, MBMS_Book__c FROM MBMS_Book_News__c]);
-        result.addAll([SELECT Id, MBMS_Title__c, MBMS_Movie__c FROM MBMS_Movie_News__c]);
+        result.addAll([
+            SELECT
+                Id,
+                MBMS_Title__c,
+                MBMS_Artist__c
+            FROM MBMS_Artist_News__c
+        ]);
+
+        result.addAll([
+            SELECT
+                Id,
+                MBMS_Title__c,
+                MBMS_Book__c
+            FROM MBMS_Book_News__c
+        ]);
+
+        result.addAll([
+            SELECT
+                Id,
+                MBMS_Title__c,
+                MBMS_Movie__c
+            FROM MBMS_Movie_News__c
+        ]);
 
         return result;
     }
